--- a/projects/08-zustand-JavaScript-Quizz/src/components/Game.module.css
+++ b/projects/08-zustand-JavaScript-Quizz/src/components/Game.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    min-width: 300px;
+    max-width: 500px;
     height: auto;
     background-color:#414141;
     border-radius: 5px;
@@ -53,11 +54,12 @@
 
 .option {
     list-style: none;
-    height: 35px;
+    height: auto;
     border: none;
     background: #5f5e5e;
     border-top: 1px solid #333;
     transition: .2s;
+    padding: 20px;
 }
 
 .option:hover {
