--- a/projects/01-tic-tac-toe/src/App.css
+++ b/projects/01-tic-tac-toe/src/App.css
@@ -1,10 +1,18 @@
-*{
-  padding: 0;
-  margin: 0;
-  font-family: system-ui;
-  background-color: #333;
-  box-sizing: border-box;
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -15,15 +23,10 @@ body {
   min-height: 100vh;
 }
 
-.square {
-  width: 100px;
-  height: 100px;
-  border: 2px solid #eee;
-  border-radius: 5px;
-  display: grid;
-  place-items: center;
-  cursor: pointer;
-  font-size: 48px;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .board {
@@ -83,7 +86,6 @@ body {
   background: #09f;
 }
 
-
 .winner {
   position: absolute;
   width: 100vw;
@@ -115,4 +117,15 @@ body {
   border-radius: 10px;
   display: flex;
   gap: 15px;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #eee;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  font-size: 48px;
 }
